name:              blog
version:           0.0.6
license:           BSD3
license-file:      LICENSE
author:            shergill
maintainer:        shergill
synopsis:          First attempts at a personal blog.
description:       'Tis a work in progress.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Custom
homepage:          http://blog.shergill.su/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Home
                     Handler.About
                     AppVault
                     FoundationAppImports
                     FoundationApp
                     Widgets
                     Helper.SqlStmts
                     Helper.Utils

    ghc-options:   -Wall -Werror -threaded -O0 -ddump-splices
    -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

executable         blog
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -Werror -threaded -O0 -ddump-splices -dppr-debug -dcore-lint -debug
    else
        ghc-options:   -Wall -Werror -threaded -O2 -dcore-lint

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                == 1.0.4.1
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , yesod-test                    >= 0.2        && < 0.3
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 0.10
                 , persistent-postgresql     >= 0.9        && < 0.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3

                 , process                       >= 1          && < 2
                 , transformers                  >= 0.3        && < 0.4
                 , time                          >= 1.4        && < 1.5
                 , yesod-paginator               >= 0.3        && < 0.4
                 , blaze-html                    >= 0.5        && < 0.6
                 , blaze-markup                  >= 0.5        && < 0.6
                 , yesod-newsfeed                >= 1.0        && < 1.1
                 , safe                          >= 0.3        && < 0.4
                 , friendly-time                 >= 0.2        && < 0.3
                 -- , reflection                    >= 1.1        && < 1.2
                 -- , tagged                        >= 0.2        && < 0.3

                 , yesod-test
test-suite integration-tests
    type: exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: tests .
    ghc-options:     -Wall
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base                          >= 4          && < 5
                 , yesod-test                    >= 0.2        && < 0.3



executable         publish-entry
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -Werror -threaded -O0 -i/home/shergill/workspace/hacking/haskell/ -dppr-debug -dcore-lint -debug
    else
        ghc-options:   -Wall -Werror -threaded -O2 -i/home/shergill/workspace/hacking/haskell/ -dcore-lint

    main-is:       publish.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: containers
                 , mtl
                 , old-locale                   >= 1            && < 1.1
