name:              blog
version:           0.0.6
license:           BSD3
license-file:      LICENSE
author:            shergill
maintainer:        shergill
synopsis:          First attempts at a personal blog.
description:       'Tis a work in progress.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Custom
homepage:          http://blog.shergill.su/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

Flag prof
    Description:   Turn on profiling options
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Handler.Home
                     Handler.About
                     AppVault
                     FoundationAppImports
                     FoundationApp
                     Widgets
                     Helper.SqlCombinators
                     Helper.SqlStmts
                     Helper.Utils

    ghc-options:   -Wall -Werror -threaded -O0 -ddump-splices
                   -fwarn-incomplete-record-updates
                   -fwarn-monomorphism-restriction
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

executable         blog
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -Werror -threaded -O0 -ddump-splices -dppr-debug
                       -dcore-lint -debug
    else
        if flag(prof)
           ghc-options: -Wall -Werror -threaded -O2 -dcore-lint -rtsopts
                        -osuf prof.o -hisuf prof.hi -hcsuf prof.hc
                        -auto-all -caf-all -fforce-recomp
        else
           ghc-options: -Wall -Werror -threaded -O2 -dcore-lint

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                == 1.1.7.2
                 , blaze-html
                 , blaze-markup
                 , bytestring
                 , clientsession
                 , data-default
                 , directory
                 , friendly-time                 >= 0.2        && < 0.3
                 , hamlet
                 , hjsmin
                 , http-conduit
                 , http-types
                 , monad-control
                 , persistent
                 , persistent-postgresql         >= 1.1        && < 1.2
                 , process
                 , safe
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , template-haskell
                 , text
                 , time
                 , transformers
                 , wai
                 , wai-extra
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-default
                 , yesod-form
                 , yesod-newsfeed                >= 1.1        && < 1.2
                 , yesod-paginator               >= 0.3        && < 0.4
                 , yesod-static
                 , yesod-test
                 -- , reflection                    >= 1.1        && < 1.2

test-suite integration-tests
    type: exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: tests .
    ghc-options:     -Wall
    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: base                          >= 4          && < 5
                 , yesod-test                    >= 0.3        && < 0.4



executable         publish-entry
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -Werror -threaded -O0 -i/home/shergill/workspace/hacking/haskell/ -dppr-debug -dcore-lint -debug
    else
        ghc-options:   -Wall -Werror -threaded -O2 -i/home/shergill/workspace/hacking/haskell/ -dcore-lint

    main-is:       publish.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts

    build-depends: containers
                 , mtl
                 , old-locale                   >= 1            && < 1.1
                 , resourcet                    >= 0.4          && < 0.5
